Added penzion Lucie

--- a/app/config/application/services.neon
+++ b/app/config/application/services.neon
@@ -6,10 +6,11 @@ services:
 	- App\Models\Cache\CacheHandler
 
 	# Restaurands
-	# App\Models\Menu\Restaurants\Jidelna
+	- App\Models\Menu\Restaurants\Jidelna
 	- App\Models\Menu\Restaurants\Kozlovna
 	- App\Models\Menu\Restaurants\Zamecka
 	- App\Models\Menu\Restaurants\Mexico
+	- App\Models\Menu\Restaurants\Lucie
 
 decorator:
 	App\Models\Menu\IRestaurant:
