--- a/www/manifest.json
+++ b/www/manifest.json
@@ -7,6 +7,11 @@
       "src": "favicon.ico",
       "sizes": "32x32 16x16",
       "type": "image/vnd.microsoft.icon"
+    },
+    {
+      "src": "favicon.ico",
+      "sizes": "228x228",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
