--- a/www/manifest.json
+++ b/www/manifest.json
@@ -9,7 +9,7 @@
       "type": "image/vnd.microsoft.icon"
     },
     {
-      "src": "favicon.ico",
+      "src": "mobile.png",
       "sizes": "228x228",
       "type": "image/png"
     }
