--- a/app/config/application/services.neon
+++ b/app/config/application/services.neon
@@ -12,6 +12,7 @@ services:
 	- App\Models\Menu\Restaurants\Mexico
 	- App\Models\Menu\Restaurants\Lucie
 	- App\Models\Menu\Restaurants\DelovaKoule
+	- App\Models\Menu\Restaurants\Rieger
 
 decorator:
 	App\Models\Menu\IRestaurant:
