Tracy mail report

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -17,6 +17,8 @@ application:
 		*: [App, Modules\*, Presenters\*\*Presenter]
 
 tracy:
+	fromEmail: mailer@sitole.cz
+	email: sveceny@sitole.cz
 	strictMode: true
 
 # Mail configuration
