--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ php:
 
 install:
     # Install Nette Code Checker
-    - travis_retry composer create-project nette/code-checker temp/code-checker ^3.0 --no-progress
+    - travis_retry composer create-project nette/code-checker temp/code-checker ~3.0 --no-progress
 
     # Install Nette Coding Standard
-    - travis_retry composer create-project nette/coding-standard temp/coding-standard ^2 --no-progress
+    - travis_retry composer create-project nette/coding-standard temp/coding-standard ~2.1 --no-progress
 
 script:
     - php temp/code-checker/code-checker --short-arrays --strict-types --fix --no-progress
