--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,3 +2,7 @@ includes:
 	- vendor/phpstan/phpstan-nette/extension.neon
 	- vendor/phpstan/phpstan-nette/rules.neon
 	- vendor/nextras/orm-phpstan/extension.neon
+
+parameters:
+	ignoreErrors:
+		- "#Property App\\Models\\Database\\ORM\\Menu\\Food::$date (DateTimeImmutable)#"
