--- a/app/config/application/services.neon
+++ b/app/config/application/services.neon
@@ -13,6 +13,9 @@ services:
 	# Commands
 	- App\Models\Console\BuildCommand
 
+	# Managers
+	aws.connector: App\Models\AWS\Connector(%keys.aws.region%, %keys.aws.secret%, %keys.aws.access%)
+
 decorator:
 	App\Models\Menu\IRestaurant:
 		tags: [restaurant]
