--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
 	],
 	"type": "project",
 	"require": {
-		"php": ">= 7.2",
+		"php": ">= 7.1",
 		"ext-openssl": "*",
 		"ext-mbstring": "*",
 
@@ -31,11 +31,8 @@
 		"nextras/dbal": "^3.1",
 		"nextras/migrations": "^3.0",
 
-		"contributte/console": "^0.5.0",
-		"contributte/monolog": "^0.3.0",
+		"contributte/console": "^0.5.0"
 
-		"aws/aws-sdk-php": "^3.95",
-		"maxbanton/cwh": "^1.1"
 	},
 	"require-dev": {
 		"phpstan/phpstan-nette": "^0.11",
